# starlight

./: .gitignore  README.md  environment  pyproject.toml  runme.py
api/cfg/: configuration.json
api/lib/: logicmonitor.py  service_now.py
api/lib/netbox/cfg/: config.json  endpoints.json
cfg/: configuration.py
core/: keyring_manager.py  logger.py
security/: vault.py
src/starlight/api/: failed_devices.py  netbox_devices.py
src/starlight/api/lib/: aws.py  logicmonitor.py
src/starlight/api/lib/netbox/: netbox.py
src/starlight/core/: keyring_manager.py  logger.py
src/starlight/ssh/lib/analysis/cisco/: show_cdp_neighbors.py  show_cdp_neighbors_detail.py  (+4 more)
ssh/lib/analysis/: helper.py  utilities.py
ssh/lib/analysis/arista/: show_version.py
ssh/lib/analysis/aruba/: show_inventory.py  show_version.py
ssh/lib/analysis/cisco/: configuration.py  show_environment.py  show_interface.py  show_lldp_neighbors.py  show_logging.py  show_mac_address.py  show_module_all.py  show_power.py  show_snmp_mib_ifmib_ifindex.py  show_version.py  show_vlan.py
ssh/lib/analysis/cloudgenix/: dump_overview.py
ssh/lib/analysis/f5/: show_sys_hardware.py
ssh/lib/analysis/linux/: cat_etc_star_dash_release.py  cat_etc_version.py
ssh/lib/analysis/netscout/: ip_interfaces_show.py
ssh/lib/analysis/opengear/: cat_proc_uptime.py  config_export.py  config_get_config.py  showserial.py
ssh/lib/analysis/paloalto/: dump_overview.py  show_system_info.py
ssh/lib/analysis/riverbed/: show_info.py  show_version.py
test/: ssh_directly_to_host.py  ssh_via_jump_host.py  tests.md
(+12 files in other folders)
